Final HW2 Bootstrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,6 @@ li a{
     height: 50px;
     width: 89%;
     text-align: center;
-    
     bottom: 50px;
     position: absolute;
    
@@ -126,8 +125,10 @@ li a{
 #main-padding{
 	padding-right: 40px;
 	padding-left: 40px;
+
 }
 /*######################################################*/
+/*top margin for aside bar when it goes down*/
 
 /*sticky footer*/
 footer{
@@ -146,4 +147,32 @@ footer{
 	font-size: 12px;
 	
 	
+}
+
+
+@media screen and (max-width: 720px){
+	body{
+	
+		font-size: 10px;
+		line-height: 15px;
+	}
+
+	#header-aside{
+		margin-left: 10%;
+	}
+
+
+	.side-logos{
+		width: 40px;
+		float: left;
+		margin-right: 8px;
+	}
+
+
+
+	footer{
+		height: 60px;
+		padding:20px;
+		
+	}
 }
